--- a/src/components/chatSuggestions/ChatSuggestions.module.css
+++ b/src/components/chatSuggestions/ChatSuggestions.module.css
@@ -1,7 +1,7 @@
 .chatSuggestionContainer {
   text-align: center;
-  margin-top: 100px;
-  padding: 20px;
+  /* margin-top: 100px;
+  padding: 20px; */
 }
 
 .icon {
