--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@
   margin: 0;
 }
 
+*::-webkit-scrollbar {
+  display: none;
+}
+
+*{
+  -ms-overflow-style: none; 
+  scrollbar-width: none;
+}
+
 .sticky-subnav {
   position: sticky;
   top: 0;
