--- a/src/components/chatBot/ChatBot.module.css
+++ b/src/components/chatBot/ChatBot.module.css
@@ -1,13 +1,23 @@
+.chatSectionParent {
+  height: calc(100vh - 180px);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .chatContainer {
-  width: 800px;
-  margin: 40px auto;
+  display: flex;
+  justify-content: center;
   border-radius: 8px;
   padding: 10px;
   font-family: Arial;
+  max-height: calc(100% - 100px);
+  overflow-y: auto;
 }
 
+
+
 .chatHistory {
-  height: 300px;
   overflow-y: auto;
   padding: 10px;
 }
