--- a/src/components/chatBot/ChatBot.module.css
+++ b/src/components/chatBot/ChatBot.module.css
@@ -13,6 +13,8 @@
   font-family: Arial;
   max-height: calc(100% - 100px);
   overflow-y: auto;
+  margin: 5px;
+  
 }
 
 
@@ -26,7 +28,7 @@
   margin: 8px 0;
   padding: 10px;
   border-radius: 6px;
-  max-width: 70%;
+  max-width: 60%;
 }
 
 .user {
@@ -38,7 +40,7 @@
 }
 
 .bot {
-  background: rgb(138, 135, 135);
+  /* background: rgb(138, 135, 135); */
   align-self: flex-start;
   text-align: left;
 }
@@ -110,4 +112,7 @@
   display: flex;
   justify-content: flex-start;
   gap: 12px;
+}
+.chatSectionParent{
+    background-color:  #f6f7f8;
 }
