--- a/src/components/chatNav/ChatNav.module.css
+++ b/src/components/chatNav/ChatNav.module.css
@@ -9,7 +9,10 @@
 .backButton{
     cursor: pointer;
     padding: 5px 7px;
-    border-radius: 5px; 
+    border-radius: 5px;
+    display: flex; 
+    justify-content: center;
+    align-items: center;
 }
 .backButton:hover{
      background: rgb(232, 232, 245);
@@ -31,4 +34,33 @@
 }
 .textHeading:hover{
     color: #1677ff;
+}
+.custSearch.ant-input {
+  border-radius: 6px;
+}
+.custSearch .ant-input-affix-wrapper {
+  border-radius: 6px;
+  border-color: #d9d9d9;
+}
+.menuButton{
+    cursor: pointer;
+    padding: 5px 7px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.menuButton:hover{
+    background: rgb(232, 232, 245);
+}
+.monitorButton{
+    cursor: pointer;
+    padding: 5px 7px;
+    border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.monitorButton:hover{
+    background: rgb(232, 232, 245);
 }
