--- a/src/components/customInput/CustomInput.module.css
+++ b/src/components/customInput/CustomInput.module.css
@@ -15,9 +15,13 @@ border: none !important;
     border-radius: 5px;
 }
 .sendBtnDiv{
-    background: rgb(232, 232, 245);
-    padding: 3px 5px;
-    margin: 3px 5px;
+    background: #3b82f6;
+    padding: 5px;
+    margin: 3px;
     border: none;
     cursor: pointer;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
