--- a/src/components/staticSidebar/StaticSidebar.module.css
+++ b/src/components/staticSidebar/StaticSidebar.module.css
@@ -1,10 +1,10 @@
 .sidebar {
   width: 70px;
   height: 100vh;
-  background-color: #f8fafc;
-  display: flex;
+  background-color: #eaeef1;
+  /* display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: center; */
   padding-top: 10px;
   border-right: 1px solid #e5e7eb;
   position: fixed;
@@ -39,7 +39,7 @@
 }
 
 .icon:hover{
-  background-color: #e5e7eb;
+  background-color: #d9dbe0;
   border-radius: 6px;}
 
 .sidebarItem{
@@ -55,6 +55,19 @@
   align-items: center;
   justify-content: center;
   padding: 10px;
-  margin-top: auto;
+  margin-top: 200px;
   margin-bottom: 20px;
+}
+
+.icon:active{
+  background-color: #4f89e0;
+  color: white;
+}
+.tabContainer:active{
+  color: #4f89e0;
+}
+
+.textInStatic {
+  font-size: 13px;
+  font-weight: 500;
 }
