--- a/src/components/chatBot/ChatBot.module.css
+++ b/src/components/chatBot/ChatBot.module.css
@@ -1,5 +1,5 @@
 .chatSectionParent {
-  height: calc(100vh - 180px);
+  height: calc(100vh - 150px);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -32,7 +32,7 @@
 }
 
 .user {
-  background: #1a38e4;
+  background: #3b82f6;
   align-self: flex-end;
   text-align: left;
   margin-left: auto;
