--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -2,6 +2,7 @@
     max-height: 100px;
     border-top: 1px solid #f0f0f0;
     padding: 30px;
+    margin-bottom: 0;
     display: flex;
     justify-content: center;
     background-color: white;
