--- a/src/components/chatSubNav/ChatSubNav.module.css
+++ b/src/components/chatSubNav/ChatSubNav.module.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: space-between;
     border-bottom: 1px solid #f0f0f0;
+    padding: 5px;
 }
 .brainIconContainer{
     padding: 6px 5px;
@@ -66,4 +67,14 @@ display: flex;
     background: rgb(232, 232, 245);
     border-radius: 5px;
     padding: 5px;
+}
+.bmwLogo{
+    border: 1px solid rgb(216, 216, 216);
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    box-shadow: 0px 4px 6px rgba(105, 105, 105, 0.1);
+    margin-left: 2px;
 }
