--- a/src/components/staticSidebar/StaticSidebar.module.css
+++ b/src/components/staticSidebar/StaticSidebar.module.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 70px;
+  width: 90px;
   height: 100vh;
   background-color: #eaeef1;
   /* display: flex;
@@ -40,7 +40,7 @@
 
 .icon:hover{
   background-color: #d9dbe0;
-  border-radius: 6px;}
+  border-radius: 8px;}
 
 .sidebarItem{
   display: flex;
@@ -64,10 +64,38 @@
   color: white;
 }
 .tabContainer:active{
-  color: #4f89e0;
+  color: #3b82f6;
 }
 
 .textInStatic {
   font-size: 13px;
   font-weight: 500;
+}
+/* .tabContainer {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 10px;
+  border-radius: 8px;
+  color: #444;
+  cursor: pointer;
+  transition: all 0.2s ease;
+}
+
+.tabContainer:hover {
+  background: #f5f5f5;
+} */
+
+.active {
+  color: #3b82f6;        /* text color */
+  font-weight: 500;
+}
+
+/* .active .icon svg {
+  stroke: #1890ff;     
+} */
+.active .icon {
+  background-color: #3b82f6;
+  color: white;
+  border-radius: 8px;
 }
