--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 /* Set global font-family and sizes */
 body {
-  font-family: 'Roboto', sans-serif;
+   /* font-family: 'Roboto', sans-serif; */
+   font-family: 'Inter', sans-serif;
   font-size: 16px;
   line-height: 1.5;
   color: #333;
