--- a/src/pages/chatAnalysis/ChatAnalysis.module.css
+++ b/src/pages/chatAnalysis/ChatAnalysis.module.css
@@ -1,11 +1,14 @@
 .mainContainer{
-    padding: 15px;
+    padding: 42px;
+
 }
 
 .header{
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 20px;
+    padding: 10px;
 }
 
 .rightContainer{
@@ -18,4 +21,13 @@
     margin: 10px 0px;
     max-height: calc(100vh - 90px);
     overflow-y: scroll;
+}
+.bmwLogo{
+    border: 1px solid rgb(216, 216, 216);
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+    box-shadow: 0px 4px 6px rgba(105, 105, 105, 0.1);
 }
