--- a/src/pages/landingPage/LandingPage.module.css
+++ b/src/pages/landingPage/LandingPage.module.css
@@ -78,7 +78,7 @@ border: none;
     border-radius: 12px;
     background-color: white;
     width:50%;
-    box-shadow: #6d7481;
+     /* soft shadow */box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
 }
 .upperMost{
     display: flex;
@@ -146,7 +146,7 @@ border: none;
 }
 
 .questionCard {
-  padding: 12px;
+  padding: 16px 12px;
   border: 1px solid #d1d5db;
   border-radius: 8px;
   text-align: left;
@@ -200,7 +200,7 @@ border: none;
 
 /* Blue outline when anything inside is focused */
 .quesOuterContainer:focus-within {
-  border: 1px solid #3b82f6;
+  border: 1px solid #1d69e4;
   box-shadow: 0 0 0 2px #93c5fd60;
 }
 
@@ -241,4 +241,42 @@ display: flex;
 .filterBtn:hover {
   transform: scale(1.05); /* gentle lift */
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.12); /* soft shadow */
+  
+}
+.sendBtn {
+  background: #3b82f6 !important;
+  border: none;
+  border-radius: 6px;
+  padding: 6px 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+  transition: opacity 0.2s ease, background 0.2s ease;
+  color: white;
+}
+
+.sendBtn:disabled,
+.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  background: #c6d4f7; /* faded blue */
+}
+
+.filterNameConatiner{
+  display: flex;
+  align-items: center;
+  gap:3px;
+}
+.filterName{
+  font-size: small;
+  font-weight: bold;
+}.bmwLogo{
+    border: 1px solid rgb(216, 216, 216);
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 6px;
+     box-shadow: 0px 4px 6px rgba(105, 105, 105, 0.1);
 }
