--- a/src/pages/landingPage/LandingPage.module.css
+++ b/src/pages/landingPage/LandingPage.module.css
@@ -108,7 +108,7 @@ border: none;
 
 .filterBtn {
   padding: 6px 16px;
-  border-radius: 6px;
+  border-radius: 18px;
   font-size: 14px;
   font-weight: 500;
   border: 1px solid transparent;
@@ -135,7 +135,8 @@ border: none;
 }
 
 .active {
-  box-shadow: 0 0 0 2px #00000020;
+  border: 2px solid #6794f5 !important; /* blue border */
+  box-shadow: none; /* optional: remove previous shadow */
 }
 
 /* Questions Grid */
@@ -166,7 +167,7 @@ border: none;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 40px 20px;
+  padding: 0px 20px 40px 20px;
   text-align: center;
 }
 
@@ -175,14 +176,14 @@ border: none;
 }
 
 .title {
-  font-size: 22px;
-  font-weight: 600;
+  font-size: 25px;
+  font-weight: bold;
   color: #1f2937; /* dark gray */
   margin: 8px 0;
 }
 
 .subtitle {
-  font-size: small;
+  font-size: 550;
   color: #6b7280; /* lighter gray */
   margin: 3px;
 }
@@ -229,7 +230,7 @@ display: flex;
 }
 .filterBtn {
   padding: 6px 16px;
-  border-radius: 6px;
+  border-radius: 11px;
   font-size: 14px;
   font-weight: 500;
   border: 1px solid transparent;
