--- a/src/pages/chatAnalysis/ChatAnalysis.module.css
+++ b/src/pages/chatAnalysis/ChatAnalysis.module.css
@@ -1,5 +1,5 @@
 .mainContainer{
-    padding: 42px;
+    padding: 15px 42px;
 
 }
 
@@ -18,7 +18,7 @@
 }
 
 .analysisCardContainer {
-    margin: 10px 0px;
+    margin: 0px 0px;
     max-height: calc(100vh - 90px);
     overflow-y: scroll;
 }
@@ -30,4 +30,8 @@
     justify-content: center;
     border-radius: 6px;
     box-shadow: 0px 4px 6px rgba(105, 105, 105, 0.1);
+}
+.textHeader{
+    font-weight: 500;
+    font-size: 18px;
 }
