--- a/src/components/chatAnalysisCard/ChatAnalysisCard.module.css
+++ b/src/components/chatAnalysisCard/ChatAnalysisCard.module.css
@@ -118,7 +118,7 @@
 }
 .datasetTypeContainer{
   display: flex;
-    background-color: #d5d9df;
+    background-color: #ebebee;
   border-radius: 6px;
 }
 .datasetTypeCon{
