re run and export done

--- a/src/components/chatBot/ChatBot.module.css
+++ b/src/components/chatBot/ChatBot.module.css
@@ -122,3 +122,8 @@
 .chatSectionParent{
     background-color:white;
 }
+#chat-container, 
+#chat-container * {
+  page-break-inside: avoid;
+  break-inside: avoid;
+}
